Project

General

Profile

Actions

Bug #8676

closed

ruby 2.0 can not require or load the source file with non-ascii path name

Bug #8676: ruby 2.0 can not require or load the source file with non-ascii path name

Added by jiayp@glodon.com (贾 延平) about 13 years ago. Updated over 12 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.0.0p277 (2013-07-23 revision 42121) [i386-mingw32]
[ruby-core:56136]

Description

=begin
Sorry for my poor english:)

I attached the patch to fix the problem, but I don't know is it the right way.

Changelog:
include/ruby/intern.h change the declaration of "rb_load_file";change parameter from char to VALUE
*load.c change the caller
*ruby.c change the "rb_load_file"'s implement
*win32/file.c change the win32 api call from ANSI type to UNICODE type.
=end


Files

win32_file_open_patch.patch (2.3 KB) win32_file_open_patch.patch patch file jiayp@glodon.com (贾 延平), 07/24/2013 11:01 AM
win32_file_open_patch.patch (4.96 KB) win32_file_open_patch.patch jiayp@glodon.com (贾 延平), 07/26/2013 09:37 AM

Related issues 1 (0 open — 1 closed)

Related to Ruby - Bug #9699: Cannot require .so file on Windows if the file path is unicode (Includes patch)ClosedwindowsActions
Actions

Also available in: PDF Atom